<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.hibernate.testcasetemplate</groupId>
	<artifactId>test-case-template-hibernate-orm-6</artifactId>
	<version>1.0.0.Final</version>
	<name>Hibernate ORM 6 Test Case Template</name>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.release>21</maven.compiler.release>
		<version.com.h2database>2.2.224</version.com.h2database>
		<hibernate.version>6.3.1.Final</hibernate.version>
		<version.junit>5.10.0</version.junit>
		<junit.version>5.10.0</junit.version>

	</properties>

	<dependencies>
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-jpamodelgen</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<!-- Have to add it manually -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.13.1</version>
			<exclusions>
				<exclusion>
					<artifactId>xml-apis</artifactId>
					<groupId>xml-apis</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.passay</groupId>    <!-- Password policy enforcement -->
			<artifactId>passay</artifactId>
			<version>1.6.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.13.0</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${version.com.h2database}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-testing</artifactId>
			<version>6.3.1.Final</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${project.build.directory}/generated-sources/annotations/</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!--	<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
				</plugin>-->
			<!--		<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.10.0</version>
						<configuration>
							<source>21</source>
							<target>21</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.hibernate.orm.tooling</groupId>
						<artifactId>hibernate-enhance-maven-plugin</artifactId>
						<version>${version.org.hibernate}</version>
						<executions>
							<execution>
								<configuration>
									<base>${project.build.testOutputDirectory}</base>
									<dir>${project.build.testOutputDirectory}</dir>
									<enableAssociationManagement>false</enableAssociationManagement>
									<enableDirtyTracking>false</enableDirtyTracking>
									<enableExtendedEnhancement>false</enableExtendedEnhancement>
									<enableLazyInitialization>false</enableLazyInitialization>
								</configuration>
								<phase>test-compile</phase>
								<goals>
									<goal>enhance</goal>
								</goals>
							</execution>
						</executions>
					</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<encoding>utf-8</encoding>
					<optimize>true</optimize>
					<debug>true</debug>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
					<fork>true</fork>
					<compilerArgs>
						<arg>--enable-preview</arg>
						<arg>-AaddGeneratedAnnotation=true</arg><!-- http://docs.jboss.org/hibernate/orm/4.3/topical/html/metamodelgen/MetamodelGenerator.html -->
						<arg>-AaddGenerationDate=true</arg>
						<arg>-AaddSuppressWarningsAnnotation=true</arg>
						<arg>-Xmaxerrs</arg>
						<arg>10</arg>
						<arg>-Xlint</arg>
					</compilerArgs>
				</configuration>
				<executions>
					<execution>
						<id>process-annotations</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<compilerArgs>
								<arg>-proc:only</arg>
							</compilerArgs>
						</configuration>
					</execution>
					<execution>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<annotationProcessorPaths>
								<path>
									<groupId>org.openjdk.jmh</groupId>
									<artifactId>jmh-generator-annprocess</artifactId>
									<version>1.37</version> <!--Make sure it is same as bom version -->
								</path>
							</annotationProcessorPaths>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
